--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "cords": "^1.0.4",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "node-telegram-bot-api": "^0.60.0"
   }
 }
